[package]
name = "git_webhooks"
version = "0.1.0"
authors = ["edison <arlicle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0-beta.1"
serde_json = "1.0.57"
hex-literal = "0.3.1"
sha-1 = "0.9.1"
sha2 = "0.9.1"

rust-crypto = "0.2.36"





